package edu.fiuba.algo3.modelo;

public abstract class Vehiculo {
    public abstract int aplicarPenalizacion(Pozo obstaculo);
}
